--- a/src/components/contentProductDesc/contentBody/productImage/ProductImage.module.css
+++ b/src/components/contentProductDesc/contentBody/productImage/ProductImage.module.css
@@ -4,7 +4,7 @@
 .imageContainer {
   display: grid;
   grid-template: 2fr 1.5fr / 1fr 1fr;
-  gap: 26px;
+  grid-gap: 26px;
 }
 .mainImage {
   grid-column: span 2;
@@ -22,7 +22,9 @@
 .discountContainer {
   display: flex;
   flex-direction: row;
-  gap: 20px;
+  grid-gap: 20px;
+  margin-left: 15px;
+  margin-bottom: 5px;
 }
 .discount {
   background-color: #d9e0c9a6;
@@ -30,7 +32,4 @@
   padding: 2px 10px;
   border-radius: 12px;
   font-weight: 500;
-}
-.discount:first-child {
-  margin-left: 15px;
 }
